--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </a>
                           </li>
                           <li class="nav__item">
-                            <a href="#education" class="nav__link">
+                            <a href="#qualification" class="nav__link">
                               <i class="uil uil-graduation-cap nav__icon"></i>Education
                             </a>
                           </li>
@@ -345,7 +345,7 @@
             </section>
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <section class="qualification section" id="qualification">
               <h2 class="section__title">Qualification</h2>
               <span class="section__subtitle">My personal journey</span>
 
@@ -591,7 +591,7 @@
 
             <ul class="footer__links">
               <li>
-                <a href="#education" class="footer__links">Education</a>
+                <a href="#qualification" class="footer__links">Qualification</a>
               </li>
 
               <li>
